Fixed spacing for wave text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -293,23 +293,28 @@ h2 {
 }
 
 /* 7. Wave Text */
-html {
+#wave-tile {
     background:#833ab4; 
-    background: linear-gradient(to bottom, #65FAFF, #FBB3CF);
+    background: linear-gradient(to bottom, #65FAFF, rgb(235, 235, 136));
   }
   
-  body,
+  /* body,
   html {
     display: grid;
     place-content: center;
     height: 100%;
     font-family: helvetica neue, helvetica, sans-serif;
-  }
+  } */
   
   #wave-text {
     isolation: isolate; 
     mix-blend-mode: multiply;
     position: relative;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 4rem;
+    margin-top: 80px;
   }
   
   #wave-text::before {
@@ -331,7 +336,7 @@ html {
   
   
   #wave-text > * {
-    font-size: clamp(40px, 5vw, 201px);
+    /* font-size: clamp(40px, 5vw, 201px); */
     position: relative;
     padding: 20px;
     margin: -20px;
